# CProjcect

./: CMakeLists.txt  README.md  createdata.c  dic.c  dic.glade  soundex.c
b/: CMakeCache.txt  Makefile  cmake_install.cmake  createdata  data  dic  soundex
